# WarGame

./: Actions.h  Armor.cpp  Armor.h  AttackAction.cpp  AttackAction.h  BodyArmor.cpp  BodyArmor.h  CMakeLists.txt  ComputerPlayer.cpp  ComputerPlayer.h  ComputerWalk.cpp  ComputerWalk.h  FileControl.cpp  FileControl.h  FindByRandom.cpp  FindByRandom.h  FindIllSoldier.cpp  FindIllSoldier.h  FindSoldierStrategy.h  Game.cpp  Game.h  GameBoard.cpp  GameBoard.h  GameConfig.hpp  HealStrategy.h  HealerSoldier.cpp  HealerSoldier.h  HeavyWeapon.cpp  HeavyWeapon.h  HumanPlayer.cpp  HumanPlayer.h  HumanWalk.cpp  HumanWalk.h  M16.cpp  M16.h  Missile.cpp  Missile.h  Object.cpp  Object.h  OutputToFile.cpp  (+41 more)
